--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "axios": "^1.1.3",
+    "cra-bundle-analyzer": "^0.1.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "polished": "^4.2.2",
@@ -29,7 +30,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "analyzer": "npm run build && npx cra-bundle-analyzer"
   },
   "eslintConfig": {
     "extends": [
